add_executable(1_hello 1_hello.cpp)
add_executable(2_matrix 2_matrix.cpp)
add_executable(3_dot 3_dot.cpp)
add_executable(4_base 4_base.cpp)
add_executable(4_1_matrix_size 4_1_matrix_size.cpp)
add_executable(5_array 5_array.cpp)
add_executable(5_2_array 5_2_array.cpp)
add_executable(6_matrix_array 6_matrix_array.cpp)
add_executable(7_transpose 7_transpose.cpp)
add_executable(8_cross_dot 8_cross_dot.cpp)
add_executable(9_matrix 9_matrix.cpp)
add_executable(9_2_matrix 9_2_matrix.cpp)